<resources>
    <string name="app_name">Android_Project</string>
    <string name="menu_search">Search</string>
    <string name="menu_post">Post</string>
    <string name="menu_profile">Profile</string>


    <!-- Strings related to post -->
    <string name="car_type">Type:</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>


    <!-- Strings related to profile -->
    <string name="user_first_name">First Name:</string>
    <string name="user_last_name">Last Name:</string>
    <string name="hello">Hello</string>

    <!-- Strings related to login -->
    <string name="title_session_page">Session Page</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Vehicle Profile-->
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="city">City</string>
    <string name="detail">Detail</string>
    <string name="availStartDate">Start Time</string>
    <string name="availEndDate">End Time</string>
    <string name="setDate">Set Date</string>
    <string name="setTime">Set Time</string>
    <string name="save">Save</string>


</resources>
