<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

    <WebView
        android:id="@+id/carImage"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/carPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="Price.../day"
        android:layout_below="@id/carImage"
        android:layout_alignRight="@id/carImage"/>

    <TextView
        android:id="@+id/carName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/carImage"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="Car Name..." />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/carName"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/startDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/carName"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="Start Date"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/availStartDate"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setDate"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/endDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDateLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="End Date"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/availEndDate"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setDate" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/endDateLayout"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/carDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDateLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/carDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Description" />

        <TextView
            android:id="@+id/carDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This is the car description..."/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:text="Go to Checkout"/>

</RelativeLayout>